@@ -26,16 +26,15 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.astraea.common.Configuration;
 import org.astraea.common.Utils;
 import org.astraea.common.backup.RecordReader;
 import org.astraea.common.backup.RecordWriter;
-import org.astraea.common.producer.Record;
 import org.astraea.connector.Definition;
 import org.astraea.connector.MetadataStorage;
 import org.astraea.connector.SourceConnector;
+import org.astraea.connector.SourceRecord;
 import org.astraea.connector.SourceTask;
 import org.astraea.fs.FileSystem;
 import org.astraea.fs.Type;
@@ -79,11 +78,12 @@ public class Importer extends SourceConnector {
           .documentation("The root directory of the file that needs to be imported.")
           .required()
           .build();
+  static String CLEAN_SOURCE_DEFAULT = "off";
   static Definition CLEAN_SOURCE_KEY =
       Definition.builder()
           .name("clean.source")
           .type(Definition.Type.STRING)
-          .defaultValue("off")
+          .defaultValue(CLEAN_SOURCE_DEFAULT)
           .documentation(
               "Clean source policy. Available policies: \"off\", \"delete\", \"archive\". Default: off")
           .build();
@@ -115,9 +115,9 @@ public class Importer extends SourceConnector {
               var taskMap = new HashMap<>(config.raw());
               taskMap.put(FILE_SET_KEY, String.valueOf(i));
               taskMap.put(TASKS_COUNT_KEY, String.valueOf(maxTasks));
-              return Configuration.of(taskMap);
+              return new Configuration(taskMap);
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -150,29 +150,26 @@ public class Importer extends SourceConnector {
       this.rootDir = configuration.requireString(PATH_KEY.name());
       this.tasksCount = configuration.requireInteger(TASKS_COUNT_KEY);
       this.paths = new LinkedList<>();
-      this.cleanSource =
-          configuration
-              .string(CLEAN_SOURCE_KEY.name())
-              .orElse(CLEAN_SOURCE_KEY.defaultValue().toString());
+      this.cleanSource = configuration.string(CLEAN_SOURCE_KEY.name()).orElse(CLEAN_SOURCE_DEFAULT);
       this.archiveDir = configuration.string(ARCHIVE_DIR_KEY.name());
     }
 
     @Override
-    protected Collection<Record<byte[], byte[]>> take() {
+    protected Collection<SourceRecord> take() {
       if (paths.isEmpty()) {
         paths = getFileSet(addedPaths, rootDir, tasksCount, fileSet);
       }
       addedPaths.addAll(paths);
       var currentPath = ((LinkedList<String>) paths).poll();
       if (currentPath != null) {
-        var records = new ArrayList<Record<byte[], byte[]>>();
+        var records = new ArrayList<SourceRecord>();
         var inputStream = Client.read(currentPath);
         var reader = RecordReader.builder(inputStream).build();
         while (reader.hasNext()) {
           var record = reader.next();
           if (record.key() == null && record.value() == null) continue;
           records.add(
-              Record.builder()
+              SourceRecord.builder()
                   .topic(record.topic())
                   .partition(record.partition())
                   .key(record.key())
